--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"></script>
 </head>
 <body>
-  <div class="hero" id="app"></div>
+  <div id="app"></div>
   <script src="bundle.js"></script>
 </body>
 </html>
